[gd_scene load_steps=8 format=3 uid="uid://cq430pfjhfyv8"]

[ext_resource type="Script" path="res://scripts/AudioManager.gd" id="1_8ya1m"]
[ext_resource type="AudioStream" uid="uid://b30amejn0vpqe" path="res://audio/pool-ambience.ogg" id="2_1btpg"]
[ext_resource type="AudioStream" uid="uid://bukbigpl4svl8" path="res://audio/donut-impact.ogg" id="3_3w3dm"]
[ext_resource type="AudioStream" uid="uid://cm1blbmm3cn5g" path="res://audio/trampoline bounce.ogg" id="4_5dyup"]
[ext_resource type="AudioStream" uid="uid://cuet6q1u1kpc0" path="res://audio/water splashing and gurgles.ogg" id="5_bxnba"]
[ext_resource type="AudioStream" uid="uid://c8owkpbknd1hm" path="res://audio/duck.mp3" id="5_hfgyw"]
[ext_resource type="AudioStream" uid="uid://bmasra4lntcpf" path="res://audio/Generic pick up.wav" id="7_qdi8x"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_8ya1m")

[node name="AmbienceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1btpg")
bus = &"Music"
parameters/looping = false

[node name="DonutImpact" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3w3dm")
bus = &"SFX"

[node name="TrampolineBounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5dyup")
bus = &"SFX"

[node name="RubberDuck" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hfgyw")
bus = &"SFX"

[node name="WaterSplash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bxnba")
bus = &"SFX"
parameters/looping = false

[node name="GenericPickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qdi8x")
