extends Node
@onready var donut_impact: AudioStreamPlayer = $DonutImpact
@onready var trampoline_bounce: AudioStreamPlayer = $TrampolineBounce
@onready var rubber_duck: AudioStreamPlayer = $RubberDuck
@onready var ambience_sound: AudioStreamPlayer = $AmbienceSound
@onready var water_splash: AudioStreamPlayer = $WaterSplash
